TP Final + Vídeo

--- a/TP-FINAL/PO2/WEB_SITE/WEB_SITE.csproj
+++ b/TP-FINAL/PO2/WEB_SITE/WEB_SITE.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Views\Home\Creditos.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
 
